fixed dark mode logic error

--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -62,7 +62,6 @@ h5 {
 }
 
 .sliding-icon-label {
-	color: white;
 	padding-top: 7px;
 }
 
